<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/NAMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNAMA"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />
    <TextView
        android:text="@string/NIK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNIK"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/txtNAMA"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />
    <TextView
        android:text="@string/STATUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSTATUS"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/txtNIK"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />
    <TextView
        android:text="@string/GENDER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGENDER"
        app:layout_constraintTop_toBottomOf="@+id/txtSTATUS"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />
    <TextView
        android:text="@string/LAMPIRAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLAMPIRAN"
        app:layout_constraintTop_toBottomOf="@+id/txtGENDER"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/NAMA"
        android:id="@+id/editNAMA"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNAMA"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints="" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editNIK"
        android:hint="@string/NIK"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editNAMA"
        app:layout_constraintStart_toEndOf="@+id/txtNIK"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints="" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editSTATUS"
        android:hint="@string/STATUS"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editNIK"
        app:layout_constraintStart_toEndOf="@+id/txtSTATUS"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints="" />
    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editSTATUS"
        app:layout_constraintStart_toEndOf="@+id/txtGENDER"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="8dp">
        <RadioButton
            android:text="@string/PRIA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbPRIA"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        <RadioButton
            android:text="@string/WANITA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbWANITA"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </RadioGroup>

    <CheckBox
        android:text="@string/KTP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbKTP"
        app:layout_constraintStart_toEndOf="@+id/txtLAMPIRAN"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/KK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbKK"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbKTP"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/txtLAMPIRAN"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/SIM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbSIM"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cbKK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLAMPIRAN"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:id="@+id/imgButtonCancel"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cbSIM"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/imgButtonAdd"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonCancel"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cbSIM"
        android:layout_marginRight="24dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>